change how tags are displayed, add tags to /hobbies template, fix /form on mobile

--- a/src/pages/form.module.scss
+++ b/src/pages/form.module.scss
@@ -23,6 +23,10 @@ textarea {
 input[type="text"],
 input[type="email"] {
   padding: 0.1rem;
+
+  @media (max-width: 800px) {
+    width: 50%;
+  }
 }
 
 textarea {
